<resources>
    <string name="app_name">ProyectoFinanzassKEL</string>
    <string name="title_activity_divisa">activity_divisa</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sig">Siguiente</string>
    <string name="text_div">Selecciona el tipo de Divisa</string>
    <string name="bg">Ingresa el Balance General de la Cuenta</string>
    <string name="title_activity_gastos">Gastos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Gastos">Gasto</string>
    <string name="Ingresos">Ingreso</string>
    <string name="Descripcion">Descripcion</string>
    <string name="Fecha">Fecha</string>
    <string name="añadir">Añadir</string>
</resources>