<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gastos">

    <Button
        android:id="@+id/gastosbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="59dp"
        android:layout_marginBottom="98dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/Gastos"
        app:layout_constraintBottom_toTopOf="@+id/editTextGastos"
        app:layout_constraintEnd_toStartOf="@+id/ingresobtn"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ingresobtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FBFAFA"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/Ingresos"
        android:textColor="#070707"
        app:layout_constraintBaseline_toBaselineOf="@+id/gastosbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gastosbtn" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="143dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="142dp"
        android:contentDescription="@string/Gastos"
        app:layout_constraintBottom_toTopOf="@+id/editTextDate"
        app:layout_constraintEnd_toStartOf="@+id/editTextGastos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gastosbtn"
        app:srcCompat="@mipmap/peso" />

    <EditText
        android:id="@+id/editTextGastos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="81dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/descripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView17"
        app:layout_constraintTop_toBottomOf="@+id/gastosbtn" />

    <TextView
        android:id="@+id/descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="34dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/Descripcion"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextDate"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextGastos" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        android:contentDescription="@string/Descripcion"
        android:ems="10"
        android:fontFamily="@font/roboto_thin"
        android:inputType="textPersonName"
        android:text="@string/Gastos"
        android:textColor="#757575"
        app:layout_constraintBaseline_toBaselineOf="@+id/descripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/descripcion" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="21dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/Fecha"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextDate" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="292dp"
        android:ems="10"
        android:hint="@string/Fecha"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="137dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/añadir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="344dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/Gastos"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>