<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ingresos">

    <Button
        android:id="@+id/buttonG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="82dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/Gastos"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/editTextIngreso"
        app:layout_constraintEnd_toStartOf="@+id/buttonIn"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="200dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/Ingresos"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonG"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="73dp"
        android:contentDescription="@string/Ingresos"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
        app:layout_constraintEnd_toStartOf="@+id/editTextIngreso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonG"
        app:srcCompat="@mipmap/peso" />

    <EditText
        android:id="@+id/editTextIngreso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="84dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/textViewDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView18"
        app:layout_constraintTop_toBottomOf="@+id/buttonG" />

    <TextView
        android:id="@+id/textViewDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/Descripcion"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextDate2"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextIngreso" />

    <TextView
        android:id="@+id/textViewF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="7dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/Fecha"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextDate2"
        app:layout_constraintEnd_toStartOf="@+id/editTextDate2"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:fontFamily="@font/roboto_thin"
        android:inputType="textPersonName"
        android:text="@string/Descripcion"
        android:textColor="#8A8989"
        app:layout_constraintBottom_toTopOf="@+id/editTextDate2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewDesc"
        app:layout_constraintTop_toBottomOf="@+id/buttonIn" />

    <EditText
        android:id="@+id/editTextDate2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="296dp"
        android:ems="10"
        android:hint="Ingresa Fecha"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewF"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/add2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="153dp"
        android:text="@string/añadir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="333dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/Ingresos"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextDate2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>